--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ foreach(TEST_NAME combo intrometry)
         rclcpp::rclcpp
         GTest::GTest
         thread_supervisor::thread_supervisor
-        pal_statistics_msgs::pal_statistics_msgs__rosidl_typesupport_cpp
+        plotjuggler_msgs::plotjuggler_msgs__rosidl_typesupport_cpp
     )
     add_test(test_${TEST_NAME} test_${TEST_NAME})
 endforeach()
