--- a/pjmsg_topic/CMakeLists.txt
+++ b/pjmsg_topic/CMakeLists.txt
@@ -1,13 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(intrometry_pjmsg_topic VERSION 1.0.0 LANGUAGES CXX)
 
-if(CCWS_CLANG_TIDY)
-    set(CMAKE_CXX_CLANG_TIDY "${CCWS_CLANG_TIDY}" CACHE STRING "" FORCE)
-endif()
-if(CCWS_CXX_FLAGS)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CCWS_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CCWS_LINKER_FLAGS}")
-else()
+include(ccws_set_cmake_flags OPTIONAL RESULT_VARIABLE CCWS_ON)
+if(NOT CCWS_ON)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
     set(CMAKE_VERBOSE_MAKEFILE ON)
 
